fix: bot style problems - solve problem with mouse on bot can not scroll - change z-index so nav buy on phone will cover the bot

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,9 @@ body, header, nav, main, footer{
     padding: 0;
     border: 0;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    overflow: hidden; 
+    -webkit-overflow-scrolling: touch,
 }
 
 /* body{
@@ -117,7 +119,8 @@ img.sticky {
     bottom: 10px;
     right: 10px;
     overflow: hidden;
-    z-index: 2;
+    z-index: 0;
+    pointer-events: none
   }
 
 .talk-box{
